# anidb-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/instructions/: ffi.instructions.md  self-explanatory-code-commenting.md
.github/workflows/: ci.yml
anidb-test-utils/: Cargo.toml
anidb-test-utils/src/: lib.rs  performance.rs
anidb-test-utils/src/builders/: mod.rs  test_data.rs
anidb-test-utils/src/mocks/: client.rs  filesystem.rs  mod.rs
anidb_cli/: Cargo.toml
anidb_cli/src/: auth.rs  config.rs  lib.rs  main.rs  paths.rs  terminal.rs
anidb_cli/src/cache/: factory.rs  file_cache.rs  identification_service.rs  memory_cache.rs  mod.rs  noop_cache.rs  service.rs  sqlite_cache.rs  traits.rs
anidb_cli/src/error/: mod.rs
anidb_cli/src/file_discovery/: extensions.rs  filter.rs  mod.rs  walker.rs
anidb_cli/src/orchestrators/: identify_orchestrator.rs  mod.rs  sync_orchestrator.rs
anidb_cli/src/output/: formatters.rs  mod.rs  template_helpers.rs
anidb_cli/src/progress/: mod.rs  provider.rs  renderer.rs  utils.rs
anidb_cli/src/sync/: mod.rs  service.rs
anidb_cli/tests/: cache_service_tests.rs  cli.rs  config_init_tests.rs  identify_orchestrator_tests.rs  path_consistency_tests.rs  progress_tests.rs
anidb_client_core/: Cargo.toml
anidb_client_core/benches/: ffi_performance.rs  hash_performance.rs  memory_performance.rs  pipeline_performance.rs
anidb_client_core/docs/: ffi_api_reference.md  ffi_architecture.md  ffi_integration_guide.md  ffi_memory_model.md  ffi_optimization_summary.md  ffi_performance_report.md  ffi_performance_tuning_guide.md  ffi_troubleshooting_guide.md
anidb_client_core/examples/: Makefile  README.md  adaptive_buffer_demo.rs  benchmark_parallel_performance.rs  c_advanced_example.c  c_basic_example.c  c_error_handling.c  callback_demo.c  simple_parallel_benchmark.rs  true_parallel_hashing.rs
anidb_client_core/include/: anidb.h
anidb_client_core/src/: api.rs  batch_processor.rs  buffer.rs  error.rs  ffi_inline.rs  ffi_memory.rs  ffi_optimization.rs  file_io.rs  file_processing.rs  hashing.rs  lib.rs  platform.rs  progress.rs  test_utils.rs
anidb_client_core/src/database/: README.md  migrations.rs  mod.rs  models.rs  repositories.rs  schema.rs
anidb_client_core/src/database/repositories/: anidb_result.rs  file.rs  hash.rs  mylist.rs  sync_queue.rs
anidb_client_core/src/error/: internal.rs  io.rs  protocol.rs  validation.rs
anidb_client_core/src/ffi/: callbacks.rs  events.rs  handles.rs  helpers.rs  memory.rs  mod.rs  operations.rs  results.rs  types.rs
anidb_client_core/src/hashing/: buffer_ring.rs  parallel.rs  registry.rs  traits.rs
anidb_client_core/src/hashing/algorithms/: crc32.rs  ed2k.rs  md5.rs  mod.rs  sha1.rs  tth.rs
anidb_client_core/src/hashing/strategies/: hybrid.rs  mod.rs  multiple.rs  parallel.rs  selector.rs  sequential.rs
anidb_client_core/src/identification/: mod.rs  query_manager.rs  service.rs  types.rs
anidb_client_core/src/memory/: mod.rs  pool.rs  stats.rs  tracker.rs
anidb_client_core/src/pipeline/: combinators.rs  hashing.rs  mod.rs  progress.rs  streaming.rs  validation.rs
anidb_client_core/src/platform/: build_config.rs  io_optimization.rs  path_handling.rs
anidb_client_core/src/protocol/: client.rs  error.rs  mod.rs
anidb_client_core/src/protocol/codec/: decoder.rs  encoder.rs  fragmentation.rs  mod.rs
anidb_client_core/src/protocol/messages/: anime.rs  auth.rs  command.rs  episode.rs  file.rs  group.rs  mod.rs  mylist.rs  response.rs
anidb_client_core/src/protocol/transport/: connection.rs  mod.rs  socket.rs  state.rs
anidb_client_core/src/security/: credential_store.rs  fallback.rs  mod.rs  secure_string.rs
anidb_client_core/tests/: FFI_INTEGRATION_TEST_SUMMARY.md  README_FFI_INTEGRATION_TESTS.md  api_contract_tests.rs  database_tests.rs  ed2k_buffer_decoupling_tests.rs  ed2k_simple_verification_tests.rs  ed2k_spec_verification_tests.rs  ed2k_streaming_tests.rs  ffi_batch_integration_tests.rs  ffi_callback_tests.rs  ffi_cross_platform_tests.rs  ffi_integration_tests.rs  ffi_memory_tests.rs  ffi_safety_tests.rs  ffi_tests.rs  file_io_parallel_hash_debug_tests.rs  file_io_parallel_hash_tests.rs  file_io_single_read_verification_tests.rs  file_processing_integration_tests.rs  hash_memory_tests.rs  hybrid_buffer_ring_tests.rs  identification_auth_tests.rs  integration_test_coordinator.rs  integration_workflow_tests.rs  memory_manager_tests.rs  mock_implementation_tests.rs  parallel_hash_tests.rs  pipeline_integration_tests.rs  protocol_auth_encoding_integration_test.rs  protocol_encoding_tests.rs  protocol_rate_limiting_tests.rs  query_manager_network_tests.rs  test_utils_example_tests.rs  testing_infrastructure_tests.rs  true_parallel_hashing_tests.rs  tth_dcpp_compatibility_tests.rs
anidb_client_core/tests/common/: mod.rs  test_harness.rs
bindings/csharp/: .gitignore  AniDBClient.sln  README.md  build.ps1  build.sh
bindings/csharp/examples/ConsoleApp/: ConsoleApp.csproj  Program.cs
bindings/csharp/src/AniDBClient/: AniDBClient.cs  AniDBClient.csproj  Exceptions.cs  (+2 more)
bindings/csharp/src/AniDBClient.Tests/: AniDBClient.Tests.csproj  ClientTests.cs  IntegrationTests.cs
bindings/nodejs/: .eslintrc.json  .gitignore  .npmignore  LICENSE  README.md  binding.gyp  build.ps1  build.sh  index.js  jest.config.js  package.json  tsconfig.json
bindings/nodejs/examples/: async.js  basic.js  batch.js  stream.js
bindings/nodejs/src/: index.ts  types.ts
bindings/nodejs/tests/: client.test.ts
bindings/python/: .gitignore  MANIFEST.in  README.md  build.ps1  build.sh  pyproject.toml  setup.py
bindings/python/examples/: advanced_usage.py  async_example.py  basic_usage.py  hash_calculator.py
bindings/python/src/anidb_client/: __init__.py  __main__.py  client.py  exceptions.py  native.py  types.py
bindings/python/tests/: test_client.py  test_exceptions.py  test_types.py
bindings/swift/: .gitignore  Package.swift  README.md  build.sh
docs/: UDP_API_Definition.md
scripts/: pre-commit-rust-check.sh
(+20 files in other folders)
