[package]
name = "anidb_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AniDB Command Line Interface"

[lib]
name = "anidb_cli"
path = "src/lib.rs"

[[bin]]
name = "anidb"
path = "src/main.rs"

[dependencies]
anidb_client_core = { path = "../anidb_client_core", features = ["database"] }
clap = { workspace = true }
clap_complete = "4.5"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
indicatif = "0.18"
colored = "3"
figment = { workspace = true }
is-terminal = "0.4.16"
toml = "0.9"
dirs = "6.0"
csv = "1.3"
handlebars = "6.2"
dialoguer = "0.11.0"
log = "0.4.27"
env_logger = "0.11.8"
globset = "0.4"
walkdir = "2.5"
thiserror = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
async-trait = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile.workspace = true
