[package]
name = "anidb_client_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
globset = "0.4"

# Hashing dependencies
md4 = { workspace = true }
crc32fast = { workspace = true }

# Platform dependencies
dirs = { workspace = true }
md-5 = "0.10"
sha1 = "0.10"
tiger = "0.2"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"], optional = true }
once_cell = "1.21"
futures.workspace = true
lazy_static = "1.5"
libc = "0.2"

# Protocol dependencies
bytes = "1.5"
zeroize = { version = "1.8.1", features = ["derive"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"

# Dependencies (rand is already used in the crate)
rand = "0.9.2"

# Optional dependencies for test-utils feature  
tempfile = { workspace = true, optional = true }

[dev-dependencies]
anidb-test-utils = { path = "../anidb-test-utils" }
tempfile = { workspace = true }
proptest = { workspace = true }
futures = { workspace = true }
criterion = { workspace = true }
serial_test = "3.2"

[[bench]]
name = "hash_performance"
harness = false

[[bench]]
name = "memory_performance"
harness = false

[[bench]]
name = "ffi_performance"
harness = false

[[bench]]
name = "pipeline_performance"
harness = false

[features]
default = []
database = ["dep:sqlx"]
test-internals = []
test-memory-isolation = []
test-utils = ["dep:tempfile"]
